# cyber_range

./: .dockerignore  .gitignore  CONTRIBUTING.md  CyberRange_GRPO_Training.ipynb  Dockerfile  HF_README.md  LICENSE  README.md  app_demo.py  deploy_to_hf.py  docker-compose.yml  eval.py  inference.py  openenv.yaml  plot_rewards.py  pyproject.toml  random_baseline.py  requirements.txt  run_demo.py  train_baseline.py  validate.py
cyber_range/: __init__.py  client.py  display.py  gym_wrapper.py  models.py
cyber_range/examples/: custom_agent_template.py
cyber_range/server/: Dockerfile  app.py  attack_designer.py  attack_engine.py  cyber_environment.py  cyber_judge.py  network_simulator.py  playbook_store.py  requirements.txt  reward_calculator.py
examples/: benchmark.py  run_all_scenarios.py
server/: __init__.py  app.py
tests/: conftest.py  test_attack_engine.py  test_environment.py  test_inference.py  test_network_simulator.py  test_reward_calculator.py  test_scenarios.py
training_results/: eval_baseline.json
